crates/parser/src/parser/snapshots/parser__parser__item__tests__parse_parse_path_item_kind_simple.snap
---
source: crates/parser/src/parser/item.rs
expression: p.parse_path_item_kind()?
---
Simple(
    Ident {
        symbol: Symbol(29, "var"),
        span: Span {
            start: BytePos(
                0,
            ),
            end: BytePos(
                3,
            ),
        },
    },
)
